# diagrams-rust

./: .python-version  Cargo.toml  pyproject.toml
src/: diagram.py  lib.rs  main.rs
