[package]
name = "diagrams-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
lopdf = { version = "0.32.0", features = ["pom", "pom_parser"] }

# [lib]
# # The name of the native library. This is the name which will be used in Python to import the
# # library (i.e. `import string_sum`). If you change this, you must also change the name of the
# # `#[pymodule]` in `src/lib.rs`.
# name = "diagrams_rust"
# # "cdylib" is necessary to produce a shared library for Python to import from.
# crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pyo3]
version = "0.20.2"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
