[tool.poetry]
name = "diagrams-rust"
version = "0.1.0"
description = "My awesome Python project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
diagrams = "^0.23.4"

[tool.poetry.group.dev.dependencies]
maturin = "^1.4.0"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "diagrams_rust"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
